syntax = "proto3";

package com.example.pilot.api;

option java_multiple_files = true;
option java_package = "org.komatsu.demo.api";
option java_outer_classname = "DemoApiProto";

service DemoService {
  rpc SayHello (HelloRequest) returns (HelloReply) {
  }
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}